setup base pages

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
-    }
-  }
+	"compilerOptions": {
+		"paths": {
+			"@/*": ["./*"],
+			"@/public/*": ["./public/*"],
+			"@/logos/*": ["./public/images/logos/*"]
+		}
+	}
 }
